Spacing fixes

--- a/Goggles/style.css
+++ b/Goggles/style.css
@@ -3,7 +3,7 @@
 
 body {
   font-family: "Source Sans Pro", sans-serif;
-  height: 100%;
+  height: 100vh;
 }
 
 /* variables */
@@ -208,7 +208,7 @@ body {
   font-weight: 400;
   line-height: 30px;
   padding-top: 1.25rem;
-  padding-bottom: 0.75rem;
+  padding-bottom: 0.8rem;
   padding-left: 0.25rem;
 }
 
@@ -231,7 +231,7 @@ body {
 
 .addendum__end-text {
   text-align: center;
-  margin-top: 2.25rem;
+  margin-top: 3.25rem;
   line-height: 24px;
 }
 
@@ -251,7 +251,7 @@ body {
   color: var(--highlight-white);
   padding-top: 1rem;
   padding-bottom: 1rem;
-  margin-top: 3.375rem;
+  margin-top: 3.75rem;
   margin-bottom: 0;
 }
 
